<?xml version="1.0" encoding="utf-8"?>
<!--use <layout> tag to support Data Binding-->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.jp.shoestoreapp.welcome.WelcomeViewModel" />
    </data>
    <!--using constraint layout to centre the buttons and textViews horizontally and also specify
     margin top and bottom easily finding the views' position
     -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".screens.welcome.WelcomeFragment">

        <TextView
            android:id="@+id/welcomeHeaderLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/welcome_text"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/welcomeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_text_subtitle"
            android:gravity="center"
            android:layout_marginTop="30dp"
            android:textSize="@dimen/button_text_size"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcomeHeaderLabel" />


        <Button
            android:id="@+id/getStartedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
             android:layout_marginTop="30dp"
            android:layout_marginStart="75dp"
            android:layout_marginEnd="75dp"
            android:layout_marginBottom="75dp"
            android:onClick="@{()-> viewModel.navigateToList()}"
            android:text="@string/get_started_button_text"
            app:layout_constraintTop_toBottomOf="@+id/welcomeLabel"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>