<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.jp.shoestoreapp.instruction.InstructionViewModel" />
    </data>
    <!-- //TODO:ConstraintLayout is that it allows you to position all of your children without having to nest any other ViewGroups inside the ConstraintLayout-->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp"
        tools:context=".instruction.InstructionFragment">


        <TextView
            android:id="@+id/instructionFragment_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/instruction"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
<ImageView
    android:id="@+id/imge_ss"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
             android:src="@drawable/download"

    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/instructionFragment_text"
    />
        <TextView
            android:id="@+id/instructionFragment_subheading_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/shoe_listing"
            android:layout_marginTop="20dp"
            android:textSize="14dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/imge_ss"
          />

        <Button
            android:id="@+id/getStartedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginStart="75dp"
            android:layout_marginEnd="75dp"
            android:layout_marginBottom="75dp"
            android:onClick="@{()->viewModel.navigateToStoreList()}"
            android:text="@string/tutor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instructionFragment_subheading_text" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>