<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewModel"
            type="com.jp.shoestoreapp.storelist.StorelistViewModel" />

        <variable
            name="shoe"
            type="com.jp.shoestoreapp.Shoe" />

    </data>

    <!-- //TODO:ConstraintLayout is that it allows you to position all of your children without having to nest any other ViewGroups inside the ConstraintLayout-->
    <androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".storelist.StoreDetailsFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/Guide_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />


    <TextView
        android:id="@+id/tv_shoe_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/ShoeName"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="@+id/Guide_start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_shoe_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:textSize="16dp"
        android:text="@={viewModel.shoeLiveData.name}"

        app:layout_constraintBaseline_toBaselineOf="@+id/tv_shoe_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/Guide_start"
        app:layout_constraintTop_toTopOf="parent"

        />


    <TextView
        android:id="@+id/tv_company"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:textSize="16dp"
        android:text="@string/company_name"
        app:layout_constraintEnd_toEndOf="@+id/Guide_start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_shoe_name" />

    <EditText
        android:id="@+id/edt_company_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:textSize="16dp"
        android:text="@={viewModel.shoeLiveData.company}"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_company"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/Guide_start"
        app:layout_constraintTop_toBottomOf="@+id/tv_shoe_name" />

    <TextView
        android:id="@+id/tv_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/price"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="@+id/Guide_start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_company_name" />

    <EditText
        android:id="@+id/edt_price"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/enter_the_price"
        android:textSize="16dp"
        android:inputType="number"
        android:text="@={viewModel.shoeLiveData.size}"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_price"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/Guide_start"
        app:layout_constraintTop_toBottomOf="@+id/edt_company_name" />

    <TextView
        android:id="@+id/tv_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:text="@string/short_description"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="@+id/Guide_start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_price" />

    <EditText
        android:id="@+id/edt_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:textSize="16dp"
        android:text="@={viewModel.shoeLiveData.description}"
        app:layout_constraintBaseline_toBaselineOf="@+id/tv_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/Guide_start"
        app:layout_constraintTop_toBottomOf="@+id/edt_price"

        />

    <Button
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_description"
         app:layout_constraintEnd_toEndOf="@+id/Guide_start"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:text="Cancel"
        android:onClick="@{()-> viewModel.navigateToStorListPage()}"
        />

    <Button
        android:id="@+id/save"
        android:layout_width="0dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_description"
        app:layout_constraintStart_toStartOf="@+id/Guide_start"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        android:text="SAVE"

        />








</androidx.constraintlayout.widget.ConstraintLayout>
</layout>